@@ -1,6 +1,12 @@
+2017-04-13  Karl Berry  <karl@tug.org>
+
+	* mapfile.c, pdftex.defines, ptexlib.h, ptexmac.h, writefont.c,
+	writepng.c: copyright updates, doc tweaks.
+
 2017-04-02  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>
 
-	* mapfile.c: warn if only tfm name is specified in a map entry for type3.
+	* mapfile.c (check_fm_entry): warn if only tfm name is specified
+	in a map entry for type3.
 
 2017-04-02  Pali Roh\'ar  <pali.rohar@gmail.com>
 
@@ -16,7 +22,9 @@
 
 2017-03-30  Pali Roh\'ar  <pali.rohar@gmail.com>
 
-	* ptexmac.h: remove duplicate macros.
+	* ptexmac.h (set_subfont, unset_subfont, is_subfont): remove
+	duplicate macros.
+
 	* writet3.c (writet3): ensure fm is non-NULL before dereferencing.
 	* mapfile.c (check_fm_entry): omit check for is_reencoded, i.e.,
 	an .enc file.
@@ -26,7 +34,7 @@
 
 	* writepng.c: Fix the size of memory to allocate when writing
 	SMask in write_png_rgb_alpha. Reported by David Fifield:
-	http://tug.org/pipermail/pdftex/2017-March/009100.html.
+	http://tug.org/pipermail/pdftex/2017-March/009100.html
 
 2017-03-18  Karl Berry  <karl@tug.org>
 
